[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Icons/Retry.png" type="Texture" id=1]
[ext_resource path="res://Assets/Icons/Home.png" type="Texture" id=2]
[ext_resource path="res://Assets/SimpleShapes/Simple.png" type="Texture" id=3]
[ext_resource path="res://Scenes/GUI/Start/Pause.gd" type="Script" id=4]
[ext_resource path="res://Assets/Icons/PlayGame.png" type="Texture" id=5]

[node name="Pause" type="Node2D"]
pause_mode = 2
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0, 0.133333, 1, 0.168627 )
margin_right = 1080.0
margin_bottom = 1920.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="TextureRect"]
margin_right = 1080.0
margin_bottom = 1920.0
rect_pivot_offset = Vector2( -618.551, 660.144 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -627.0
margin_right = 150.0
margin_bottom = 493.0
custom_constants/separation = 150
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="TextureButton" parent="TextureRect/Control/VBoxContainer"]
margin_right = 300.0
margin_bottom = 300.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="TextureButton" parent="TextureRect/Control/VBoxContainer"]
margin_top = 450.0
margin_right = 300.0
margin_bottom = 700.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="TextureButton" parent="TextureRect/Control/VBoxContainer"]
margin_top = 850.0
margin_right = 300.0
margin_bottom = 1100.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )

[connection signal="pressed" from="TextureRect/Control/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="TextureRect/Control/VBoxContainer/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="TextureRect/Control/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
